# dual-readout_TB

./: CMakeLists.txt  envset.sh
DQM/: Monit  Monit.cc  mapping_data_MCPPMT_positiveSignal.csv  ped_343.csv  plotting  plotting.cc  sample_ped.csv  test.cc  test.root
DQM/MonitPlot/Run345/: Run345_File0.root
analysis/: DwcTime.cc  TBauxInfo.cc  TBdwc.cc  TBdwc_vs.cc  TBfast.cc  TBinfo.cc  TBint.cc  TBtest.cc  TBtree.cc  TBtreeMaker.cc  TBwave.cc  analysis.cc  condor.sh  condor.sub  dwcinfo.cc  functions.cc  joblist.txt  run.sh  v2sh.sh  v2sub.sub
include/: TBauxfactory.h  TBdetector.h  TBdwc.h  TBload.h  TBmonit.h  TBmonit.h_depre  TBplot.h  TBread.h_depre  TBvalid.h_depre
src/: TBauxfactory.cc  TBdetector.cc  TBdwc.cc  TBmonit.cc  TBmonit.cc_depre  TBplot.cc  pydrcTB.cpp
test/: TBmonit.py
